--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@ body {
   background-repeat: repeat;
   background-attachment: scroll;
   margin-top: 40px;
+  margin-bottom: 30px;
 }
 .container {
-  width: 92%;
+  width: 960px;
   min-height: 100vh;
   margin: 0 auto;
   border-radius: 10px 10px 0px 0px;
@@ -40,6 +41,6 @@ body {
 }
 .footer-distributed {
   width: 100%;
-  height: 300px;
+  height: 500px;
   background-color: #95cb52;
 }
