--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-image: url(https://kinderbalans.nl/wp-content/themes/kinderbalans/images/noise.png);
   background-position: left top;
@@ -5,42 +10,174 @@ body {
   background-repeat: repeat;
   background-attachment: scroll;
   margin-top: 40px;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 .container {
   width: 960px;
   min-height: 100vh;
   margin: 0 auto;
+  overflow: hidden;
+  box-shadow: 0 2px 6px rgba(100, 100, 100, 0.3);
   border-radius: 10px 10px 0px 0px;
-  border: solid 1px black;
 }
 .header-distributed {
   width: 100%;
   height: 200px;
-  border-radius: 10px;
+  border-radius: 10px 10px 0px 0px;
   background-color: #fff;
+  position: relative;
 }
+
+.header-left {
+  width: 35%;
+  height: 200px;
+  float: left;
+}
+
+.header-center {
+  width: 30%;
+  height: 200px;
+  float: left;
+}
+
+.header-right {
+  width: 35%;
+  height: 200px;
+  float: left;
+}
+
+/* Navigation */
+
 .nav {
   background-color: #95cb52;
   width: 100%;
   height: 40px;
 }
-.images {
-  width: 100%;
-  height: 500px;
+
+ul {
+  padding: 10px;
+  list-style: none;
+  position: relative;
+  display: block;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 14px;
 }
+
+li {
+  display: inline;
+}
+
+a {
+  padding: 5px;
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  color: #222;
+}
+
+.active {
+  color: #222;
+}
+
+/* End of Navigation */
+
+.main-content {
+  width: 90%;
+  height: 1200px;
+  margin: 0 auto;
+}
+
+.images {
+  margin-bottom: 35px;
+  margin-top: 5px;
+  width: 100%;
+  height: 450px;
+  background-color: black;
+}
+
 .balk {
-  width: 70%;
+  position: relative;
+  padding-left: -60px;
+  position: relative;
+  left: -50px;
+  padding-left: 50px;
+  margin-bottom: 20px;
+  max-width: 70%;
   height: 50px;
   background-color: #95cb52;
-  font-weight: bold;
 }
-.content {
-  height: 800px;
-  width: 100%;
+
+h1 {
+  text-transform: uppercase;
+  font-weight: normal;
+  font-size: 30px;
+  color: #222;
+  padding-top: 7.5px;
+  position: relative;
+  text-align: left;
 }
-.footer-distributed {
+
+p {
+  font-size: 22px;
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+span,
+.none {
+  font-size: 16px;
+  text-align: left;
+  line-height: 20px;
+}
+
+.testimonials {
   width: 100%;
   height: 500px;
+  border: solid 1px black;
+}
+
+.footer-distributed {
+  width: 100%;
+  height: 300px;
   background-color: #95cb52;
+}
+
+.footer-left {
+  width: 35%;
+  height: 240px;
+  float: left;
+  background-color: brown;
+}
+
+.footer-center {
+  width: 30%;
+  height: 240px;
+  float: left;
+  background-color: yellow;
+}
+
+.footer-right {
+  width: 35%;
+  height: 240px;
+  float: left;
+  background-color: green;
+}
+
+.footer-copyright {
+  width: 100%;
+  height: 60px;
+  background-color: #3a3d41;
+  color: #999;
+  float: left;
+}
+
+.footer-copyright-left {
+  width: 90%;
+  margin: 0 auto;
+  padding-top: 20px;
+  font-size: 16px;
 }
