--- a/style.css
+++ b/style.css
@@ -19,7 +19,9 @@ body {
   overflow: hidden;
   box-shadow: 0 2px 6px rgba(100, 100, 100, 0.3);
   border-radius: 10px 10px 0px 0px;
+  background-color: #fff;
 }
+
 .header-distributed {
   width: 100%;
   height: 200px;
@@ -52,6 +54,7 @@ body {
   background-color: #95cb52;
   width: 100%;
   height: 40px;
+  margin-bottom: 50px;
 }
 
 ul {
@@ -87,13 +90,14 @@ a:hover {
 
 .main-content {
   width: 90%;
-  height: 1200px;
+  height: auto;
   margin: 0 auto;
+  padding-bottom: 50px;
 }
 
 .images {
   margin-bottom: 35px;
-  margin-top: 5px;
+  margin-top: -45px;
   width: 100%;
   height: 450px;
   background-color: black;
