--- a/style.css
+++ b/style.css
@@ -128,6 +128,12 @@ body {
   height: 200px;
 }
 
+.site-content p.overmij {
+  float: left;
+  margin-right: 20px;
+  margin-top: 5px;
+}
+
 .content-title {
   position: relative;
   left: -50px;
