--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ body {
   margin-top: -45px;
   width: 100%;
   height: 450px;
-  background-color: black;
+  background-color: pink;
 }
 
 .site-content {
@@ -132,6 +132,17 @@ body {
   float: left;
   margin-right: 20px;
   margin-top: 5px;
+}
+
+.site-content p.contact {
+  height: auto;
+  width: auto;
+  font-size: 16px;
+}
+
+.site-content p.zorgkaart {
+  height: 200px;
+  width: auto;
 }
 
 .content-title {
@@ -173,6 +184,18 @@ body {
 
 .site-content ul li {
   font-size: 16px;
+  line-height: 2;
+}
+
+.site-content a {
+  color: #8bc600;
+  outline: none;
+  text-decoration: none;
+  font-weight: 400;
+}
+
+.site-content a:hover {
+  text-decoration: underline;
 }
 
 .testimonials {
