--- a/style.css
+++ b/style.css
@@ -216,24 +216,43 @@ body {
 }
 
 .col {
-  width: 286px;
+  margin-right: 50px;
+  width: 250px;
   height: 300px;
-  border: solid 1px black;
+  background-color: white;
   float: left;
+  border: solid 1px black;
 }
 
 .bg-col {
+  height: 100px;
+  width: 100%;
+  background-color: #95cb52;
 }
 
 .picture {
+  top: 40px;
+  position: relative;
   width: 100px;
   height: 100px;
   border-radius: 50%;
   margin: 0 auto;
-  border: solid 1px red;
+  border: solid 5px white;
 }
 
 .col-text {
+  top: 50px;
+  position: relative;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 700;
+  font-family: "Roboto", sans-serif;
+}
+
+.col-line {
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 30px;
 }
 
 /* Footer */
