--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
   width: 100%;
 }
 
-.header-icons i.fa-facebook-square {
+/* .header-icons i.fa-facebook-square {
 }
 .header-icons i.fa-twitter-square {
 }
@@ -64,7 +64,7 @@ body {
 .header-icons i.fa-linkedin-square {
 }
 .header-icons i.fa-phone-square {
-}
+} */
 
 .header-search {
   border: solid 1px red;
