--- a/style.css
+++ b/style.css
@@ -120,7 +120,6 @@ body {
   height: auto;
   margin: 0 auto;
   padding-bottom: 50px;
-  border: solid 1px red;
 }
 
 .slider {
@@ -211,30 +210,45 @@ body {
 }
 
 .testimonials {
+  margin-top: 60px;
   width: 100%;
-  height: 500px;
+  height: 450px;
+}
+
+.col-none {
+  margin-top: 20px;
+  width: 250px;
+  height: 350px;
+  background-color: white;
+  float: left;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(100, 100, 100, 0.3);
 }
 
 .col {
-  margin-right: 50px;
+  margin-top: 20px;
   width: 250px;
-  height: 300px;
+  height: 350px;
   background-color: white;
   float: left;
-  border: solid 1px black;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(100, 100, 100, 0.3);
+  margin-right: 57px;
 }
 
-.bg-col {
+.col-bg {
+  border-radius: 8px 8px 0px 0px;
   height: 100px;
   width: 100%;
   background-color: #95cb52;
 }
 
-.picture {
-  top: 40px;
+.col-picture {
+  background-color: #fff;
+  top: 35px;
   position: relative;
-  width: 100px;
-  height: 100px;
+  width: 110px;
+  height: 110px;
   border-radius: 50%;
   margin: 0 auto;
   border: solid 5px white;
