--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 .header-distributed {
   width: 100%;
-  height: 200px;
+  height: 170px;
   border-radius: 10px 10px 0px 0px;
   background-color: #fff;
   position: relative;
@@ -33,25 +33,24 @@ body {
 
 .header-left {
   width: 30%;
-  height: 200px;
+  height: 170px;
   float: left;
 }
 
 .header-center {
   width: 40%;
-  height: 200px;
+  height: 170px;
   float: left;
 }
 
 .header-right {
   width: 30%;
-  height: 200px;
+  height: 170px;
   float: left;
 }
 
 .header-icons {
-  height: 200px;
-  border: solid 1px black;
+  height: 170px;
   width: 100%;
 }
 
@@ -67,8 +66,7 @@ body {
 } */
 
 .header-search {
-  border: solid 1px red;
-  /* w.i.p */
+  width: 100%;
 }
 
 .header-logo {
