--- a/style.css
+++ b/style.css
@@ -369,6 +369,11 @@ body {
 }
 
 .header-right .icons {
-    margin-left: 100px;
-    ;
+    margin-left: 190px;
+    color: #95cb52;
+}
+
+.icons i {
+    margin-top: 10px;
+    font-size: 25px;
 }
