--- a/style.css
+++ b/style.css
@@ -172,23 +172,23 @@ body {
   width: 400px;
   height: 400px;
   padding-bottom: 10px;
-  background-color: rgb(247, 247, 246);
+  background-color: #95cb52;
   float: left;
   margin-top: 40px;
   margin-right: 64px;
   box-shadow: 6px 6px 5px #aaaaaa;
-  border-radius: 5px 5px 0px 0px;
+  border-radius: 0px 25px 0px 25px;
 }
 
 .testimonial .card-uno {
   width: 400px;
   height: 400px;
   padding-bottom: 10px;
-  background-color: #f8f8ff;
+  background-color: #95cb52;
   float: left;
   margin-top: 40px;
   box-shadow: 6px 6px 5px #aaaaaa;
-  border-radius: 5px 5px 0px 0px;
+  border-radius: 0px 25px 0px 25px;
 }
 
 .testimonial .avatar {
@@ -199,7 +199,7 @@ body {
   height: 100px;
   border-radius: 50%;
   margin: 0 auto;
-  border: solid 5px #efefef;
+  border: solid 5px #fff;
   margin-bottom: 40px;
 }
 
@@ -208,7 +208,6 @@ body {
   margin-bottom: 20px;
   text-align: center;
   font-weight: 700;
-  color: #95cb52;
   font-size: 20px;
 }
 
