--- a/style.css
+++ b/style.css
@@ -171,6 +171,16 @@ body {
 
 /* BOWEN THERAPIE STYLE */
 
+/* OVER MIJ STYLE */
+
+.site-content .over-mij p {
+  font-size: 18px;
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+/* OVER MIJ STYLE */
+
 /* TESTIMONIAL STYLE */
 
 .testimonial {
