--- a/style.css
+++ b/style.css
@@ -426,9 +426,11 @@ body {
 .footer-left .company-logo {
   width: 280px;
   height: 120px;
-  background-image: url("assets/images/Untitled-1.png");
-  background-size: cover;
-  margin-bottom: 10px;
+  position: relative;
+  top: 35px;
+  text-align: left;
+  font-size: 46px;
+  font-weight: 700;
 }
 
 .footer-left .company-slogan {
