--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ body {
 
 .footer-distributed {
   width: 100%;
-  height: 360px;
+  height: 300px;
   background-color: #95cb52;
   color: #fff;
   text-align: left;
@@ -308,19 +308,19 @@ body {
 
 .footer-left {
   width: 40%;
-  height: 300px;
+  height: 250px;
   float: left;
 }
 
 .footer-center {
   width: 32.5%;
-  height: 300px;
+  height: 250px;
   float: left;
 }
 
 .footer-right {
   width: 27.5%;
-  height: 300px;
+  height: 250px;
   float: left;
 }
 
@@ -425,12 +425,11 @@ body {
 
 .footer-left .company-logo {
   width: 280px;
-  height: 120px;
-  position: relative;
-  top: 35px;
+  height: auto;
   text-align: left;
-  font-size: 46px;
+  font-size: 45px;
   font-weight: 700;
+  margin-bottom: 40px;
 }
 
 .footer-left .company-slogan {
