--- a/style.css
+++ b/style.css
@@ -330,12 +330,6 @@ body {
 
 /* TESTIMONIAL STYLE */
 
-.site-content p.contact {
-  height: auto;
-  width: auto;
-  font-size: 16px;
-}
-
 .site-content p.zorgkaart {
   height: 200px;
   width: auto;
@@ -347,6 +341,21 @@ body {
   font-size: 18px;
   text-align: left;
   margin-bottom: 20px;
+}
+
+.site-content .contact-form {
+  width: 100%;
+  height: 400px;
+  background-color: yellow;
+  margin-bottom: 20px;
+}
+
+.site-content .contact p.pand {
+  height: 315px;
+  width: 420px;
+  float: right;
+  margin-left: 20px;
+  margin-top: 20px;
 }
 
 /* CONTACT STYLE */
@@ -529,9 +538,7 @@ body {
   margin-top: -20px;
 }
 
-/* CONTACT FORM */
-
-input,
+/* input,
 select,
 textarea {
   width: 100%;
@@ -557,8 +564,8 @@ input[type="submit"]:hover {
   background-color: #000000;
 }
 
-/* contact tekst */
+
 
 class.text {
   width: 50%;
-}
+} */
