--- a/style.css
+++ b/style.css
@@ -337,7 +337,7 @@ body {
 
 /* CONTACT STYLE */
 
-.site-content .contact {
+.site-content .contact p {
   font-size: 18px;
   text-align: left;
   margin-bottom: 20px;
@@ -355,7 +355,6 @@ body {
   width: 420px;
   float: right;
   margin-left: 20px;
-  margin-top: 20px;
 }
 
 /* CONTACT STYLE */
