--- a/style.css
+++ b/style.css
@@ -357,6 +357,20 @@ body {
   margin-left: 20px;
 }
 
+.site-content .contact p ul {
+  margin-bottom: 30px;
+  list-style: none;
+}
+.site-content .contact p ul li {
+  font-size: 18px;
+  line-height: 2;
+}
+
+.site-content .contact p ul li::before {
+  content: "• ";
+  font-size: 20px;
+}
+
 /* CONTACT STYLE */
 
 /* Footer */
