--- a/style.css
+++ b/style.css
@@ -461,7 +461,7 @@ body {
 }
 
 .footer-right .contact-information a:hover {
-  color: black;
+  color: #3a3d41;
 }
 
 .footer-center .openingstijden-title {
